--- a/Assignment04/wwwroot/index.html
+++ b/Assignment04/wwwroot/index.html
@@ -30,6 +30,7 @@
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<!--js(should lay the end of file)-->
 	<script src="_content/BlazorComponent/js/blazor-component.js"></script>
+	<script src="https://cdn.masastack.com/npm/echarts/5.1.1/echarts.min.js"></script>
 
 </body>
 
